# structured-skills

./: .gitignore  README.md  config.toml.example  pyproject.toml  structured-skills-prd.docx  tutorial.md
src/ss/: cli.py  config.py  decoder.py  ss_wrapper.sh  vm.py
ss/: __init__.py  cli.py  config.py  decoder.py  mcp.py  opcodes.py  prompts.py  vm.py
tests/: test_extraction.ss  test_math.ss
tests/data/: 1.txt  2.txt  3.txt  4.txt  5.txt
