[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structured-skills"
version = "0.1.0"
description = "A Tiny VM for LLM-Powered Programs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pydantic",
]

[project.scripts]
ss = "ss.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ss*"]
